@@ -1,3 +1,4 @@
+
 MapServer Revision History
 ==========================
 
@@ -13,6 +14,8 @@ For a complete change history, please see the Git log comments.
 
 Current Version (git master, 6.3-dev, future 6.4):
 --------------------------------------------------
+
+- Fix WFS GetFeature result bounds are not written in requested projection (#4494)
 
 - Fixed wrong size in LegendURL of root layer (#4441)
 
